FIX: order form on mobile devices

--- a/assets/sass/elements/_order-popup.scss
+++ b/assets/sass/elements/_order-popup.scss
@@ -22,16 +22,21 @@
 	&__container {
 		position: relative;
 		z-index: 2;
-		max-width: 600px;
+		width: 100%;
 		height: 325px;
 		max-height: 450px;
-		padding: 15px 0;
 		margin: 0 10px;
+		padding: 15px 0;
 		background-color: #fff;
 		box-shadow: 0px 0px 15px rgba(0,0,0,0.3);
+
+		@include media-breakpoint-up(sm) {
+			width: 450px;
+		}
+
 		@include media-breakpoint-up(md) {
-			height: 415px;
 			width: 600px;
+			height: 415px;
 			padding: 25px 0 20px;
 		}
 	}
@@ -44,13 +49,12 @@
 	&__title {
 		font-size: 16px;
 		margin-top: 0;
+
 		@include media-breakpoint-up(md) {
 			font-size: 20px;
 		}
 	}
 	&__close {
-		width: 16px;
-		height: 16px;
 		font-size: 2em;
 		line-height: 16px;
 		position: absolute;
@@ -58,6 +62,8 @@
 		top: 8px;
 		right: 20px;
 		display: block;
+		width: 16px;
+		height: 16px;
 		cursor: pointer;
 		&:hover {
 			color: #000;
@@ -66,6 +72,7 @@
 	.wpcf7 {
 		p {
 			margin: 0 0 .5em;
+
 			@include media-breakpoint-up(md) {
 				margin-bottom: 1em;
 			}
@@ -75,8 +82,9 @@
 		textarea {
 			font-size: 13px;
 			padding: 8px 10px;
-			border-radius: 4px;
 			vertical-align: top;
+			border-radius: 4px;
+
 			@include media-breakpoint-up(md) {
 				padding: 10px;
 			}
@@ -84,15 +92,16 @@
 		textarea {
 			min-height: 80px;
 			margin: 0;
+
 			@include media-breakpoint-up(md) {
 				min-height: 100px;
 			}
 		}
 		.wpcf7-submit {
-			display: inline-block;
-			vertical-align: middle;
 			font-size: 13px;
+			display: inline-block;
 			padding: 15px 25px;
+			vertical-align: middle;
 			&:focus {
 				box-shadow: inset 0 0 10px #fff;
 			}
@@ -104,11 +113,11 @@
 			display: none;
 		}
 		.wpcf7-response-output {
+			font-size: 13px;
+			line-height: 1.2;
 			margin-top: 0;
 			margin-bottom: 0;
 			padding: 10px;
-			font-size: 13px;
-			line-height: 1.2;
 		}
 		.ajax-loader {
 			margin: 0 0 0 4px;
